Start paying some attention to the UI, pull styles in from blog page

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>GameBrowser Web</title>
+    <link rel="stylesheet" href="https://jonifen.co.uk/css/jonifen-fonts.min.css" />
+    <link rel="stylesheet" href="https://jonifen.co.uk/css/jonifen.min.css" />
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
