--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,17 @@
 <html>
   <head>
+    <meta charset=utf-8>
+    <meta http-equiv=x-ua-compatible content="IE=edge">
+    <meta name=HandheldFriendly content="True">
+    <meta name=MobileOptimized content="320">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
+    <meta http-equiv="Cache-Control" content="max-age=600" />
+    <meta name="description" content="Game Server Browser" />
+    <meta name="apple-mobile-web-app-title" content="GameBrowser" />
+    <meta name="theme-color" content="#1f2833" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="full-screen" content="yes" />
     <title>GameBrowser Web</title>
     <link rel="stylesheet" href="https://jonifen.co.uk/css/jonifen-fonts.min.css" />
     <link rel="stylesheet" href="https://jonifen.co.uk/css/jonifen.min.css" />
